<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TSViewer</string>
    <string name="title">TSViewer</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="filters">Filters</string>
    <string name="username">Root</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="period">Period</string>
    <string name="parent_task">Parent task</string>
    <string name="example_view_task">Android just became the #1 OS on the planet. Take that, Microsoft!
        http://t.co/123
    </string>
    <string name="example_view_name">Task #1</string>
    <string name="example_filter">Filter</string>
    <string name="example_time">10.10.10 11:11</string>
    <string name="example_name_notification">Notification</string>
    <string name="example_submitter">Admin</string>
    <string name="refresh">Refresh</string>
</resources>